# embedding-mcp-python

./: .gitignore  README.md  TESTING.md  pyproject.toml
src/embeddings_mcp/: __init__.py
tests/: test_embeddings.py
